Termine El modulo de vista detallada del UI

--- a/main.tex
+++ b/main.tex
@@ -78,6 +78,7 @@
 
 %-------------Preeliminar-------------
 \include{Secciones/Preeliminar/Portada}
+\include{Secciones/Preeliminar/Portada}
 \include{Secciones/Preeliminar/HBlanca}
 \include{Secciones/Preeliminar/Firmas}
 \include{Secciones/Preeliminar/HBlanca}
