--- a/Secciones/Media 2/ModulosDetallados/MF4.tex
+++ b/Secciones/Media 2/ModulosDetallados/MF4.tex
@@ -5,37 +5,35 @@
 
 \begin{figure}[!htb]
     \centering
-     \begin{subfigure}{0.3\textwidth}
+    \begin{subfigure}{0.45\textwidth}
         \centering
         \includegraphics[width=\linewidth]{imagenes/Landing.png}
         \caption{\footnotesize Señal de excitación (Barrido senoidal)}
         \label{fig:sub1}
     \end{subfigure}
     \hfill
-    \begin{subfigure}{0.3\textwidth}
+    \begin{subfigure}{0.45\textwidth}
         \centering
         \includegraphics[width=\linewidth]{imagenes/Guitarra.png}
         \caption{\footnotesize Audio grabado}
         \label{fig:sub2}
     \end{subfigure}
-    \hfill
-    \begin{subfigure}{0.3\textwidth}
+    \vskip\baselineskip
+    \begin{subfigure}{0.45\textwidth}
         \centering
         \includegraphics[width=\linewidth]{imagenes/Control Manual.png}
         \caption{\footnotesize Respuesta al impulso estimada}
-        \label{fig:sub2}
-    \begin{subfigure}{0.3\textwidth}
+        \label{fig:sub3}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.45\textwidth}
         \centering
         \includegraphics[width=\linewidth]{imagenes/Historial.png}
         \caption{\footnotesize Audio grabado}
-        \label{fig:sub2}
-    \end{subfigure}
-    \hfill
+        \label{fig:sub4}
     \end{subfigure}
     \caption{Gráficas resultantes de generación y medición de la acústica}
 \end{figure}
-\FloatBarrier
-
 
 \hfill\break
 \begin{figure}[!htb]
