To save changes

--- a/Referencias/predoc.bib
+++ b/Referencias/predoc.bib
@@ -234,4 +234,67 @@
     addendum = {[Accessed: 2023-10-30]}
 }
 
+@book{Shigley2012,
+    title = {{Diseño en ingeniería mecánica de Shigley}},
+    year = {2012},
+    author = {Budynas, R. and Keith, J.},
+    publisher = {McGraw.Hill},
+    edition = {9th},
+    address = {España}
+}
+@book{Rodríguez2015,
+    title = {{Compendio temático y tópicos selectos para la formación en diseño mecánico del ingeniero en mecatrónica}},
+    year = {2015},
+    author = {Rodríguez, J.},
+    publisher = {SEP|IPN},
+    edition = {1st},
+    address = {México}
+}
+@article{Ingeniantes2019,
+    author = {Morales, A. and Morales, M. and Matínez, B.},
+    title = {{Diseño de tornillo sinfín-corona del sistema de transmisión para maquina de ensayo de impacto por caída libre en materiales pétreos}},
+    journal = {{Ingeniantes}},
+    year = {2019},
+    volume = {1},
+    number = {2}
+}
 
+@misc{CatalagoMotoresMonofásicos,
+    URL = {https://www.truper.com/CatVigente/images/modulos/670-102301-MOE-1-4B-371.jpg?517369074},
+    addendum = {[Accessed: 2024-05-24]}
+}
+
+@book{Norton2011,
+    title = {{Diseño de máquinas un enfoque integrado}},
+    year = {2011},
+    author = {Norton, R.},
+    publisher = {PEARSON},
+    edition = {4th},
+    address = {México}
+}
+
+@misc{MotoresElectricos,
+    URL = {https://guide.directindustry.com/es/que-motor-electrico-elegir/},
+    addendum = {[Accessed: 2024-05-27]}
+}
+
+@article{PilchDiffusers,
+    author = {Pilch, A. and Kamisinski, T.},
+    title = {{The effect of Geometrical and Material Modification of Sound Diffusers on Their Acoustic Parameters}},
+    journal = {{Ingeniantes}},
+    year = {2019},
+    volume = {1},
+    number = {2}
+}
+
+@techreport{PilchDiffusers,
+    author = {Pilch, A. and Kamisinski, T.},
+    title = {{The effect of Geometrical and Material Modification of Sound Diffusers on Their Acoustic Parameters}},
+    institution = {{AGH University of Science and Technology Departament of Mechannics and Vibroacoustics}},
+    year = {2011}
+}
+
+@misc{TypesDiffusers,
+    URL = {https://acousticgeometry.com/types-of-sound-diffusers/},
+    addendum = {[Accessed: 2024-06-06]}
+}
