--- a/Secciones/Adicional/Referencias.tex
+++ b/Secciones/Adicional/Referencias.tex
@@ -1,4 +1,3 @@
-%\bibliographystyle{ieeetr}
-\selectlanguage{english}
+\nocite{*}
 \printbibliography
-\selectlanguage{spanish}
+% \selectlanguage{spanish}
