Compilation errors fixed

--- a/Referencias/predoc.bib
+++ b/Referencias/predoc.bib
@@ -23,7 +23,6 @@
 @online{Library2016,
     title = {{Library of Congress}},
     year = {2016},
-    month = {Agosto},
     author = {{Library of Congress}},
     url = {https://www.loc.gov/collections/edison-company-motion-pictures-and-sound-recordings/articles-and-essays/history-of-edison-sound-recordings/history-of-the-cylinder-phonograph/},
     addendum = {[Accessed: 2023-05-11]}
@@ -93,7 +92,7 @@
 }
 
 @online{AudioHunt,
-    title = {{Studio Worklow & Why it Matters}},
+    title = {{Studio Worklow and Why it Matters}},
     year = {2022},
     author = {William Weir},
     publisher = {Studio Assistant},
@@ -242,7 +241,7 @@
     edition = {9th},
     address = {España}
 }
-@book{Rodríguez2015,
+@book{Rodriguez2015,
     title = {{Compendio temático y tópicos selectos para la formación en diseño mecánico del ingeniero en mecatrónica}},
     year = {2015},
     author = {Rodríguez, J.},
@@ -259,7 +258,7 @@
     number = {2}
 }
 
-@misc{CatalagoMotoresMonofásicos,
+@misc{CatalagoMotoresMonofasicos,
     URL = {https://www.truper.com/CatVigente/images/modulos/670-102301-MOE-1-4B-371.jpg?517369074},
     addendum = {[Accessed: 2024-05-24]}
 }
