--- a/Secciones/Media 2/ModulosDetallados/MF3.tex
+++ b/Secciones/Media 2/ModulosDetallados/MF3.tex
@@ -169,7 +169,7 @@ Habiendo elegido el tipo de transmisión que genera la rotación del prima trian
 \subparagraph{Potencia del motor}\hfill \break
 Siguiendo la secuencia de diseño para transmisiones de potencia \cite{Shigley2012}, como primer paso es conocer los requisitos de potencia y par de torsión, ya que determinará las necesidades globales de dimensionamiento de todo el sistema.\hfill \break
 Para el calculo de la potencia necesaria del motor, mediante el diseño preliminar se obtiene el peso que se moverá mediante el sistema de transmisión corona - sinfín, el cual es de 8.58 $Kg_f$\break
-Se tiene que el momento de torsión \cite{Rodríguez2015} necesario para mover la corona es igual a:
+Se tiene que el momento de torsión \cite{Rodriguez2015} necesario para mover la corona es igual a:
 \begin{equation}
     M_t = F\cdot d
 \end{equation}
@@ -181,7 +181,7 @@ Para una corona con un radio propuesto de 71 $mm$ se obtiene:
 \begin{equation*}
     M_t = 609.18 Kg_f\cdot mm    
 \end{equation*}
-Teniendo el momento de torsión se calcula la potencia consumida a partir de la siguiente ecuación \cite{Rodríguez2015}.
+Teniendo el momento de torsión se calcula la potencia consumida a partir de la siguiente ecuación \cite{Rodriguez2015}.
 \begin{equation}
     M_t = \frac{716,200\cdot N_{CON}}{n}
 \end{equation}
@@ -196,11 +196,11 @@ Considerando $n=20$ $rpm$ como la velocidad angular de salida necesaria de la co
 \begin{equation*}
     N_{CON}=0.017 C.P.
 \end{equation*}
-Luego, para la potencia suministrada se considera la siguiente fórmula \cite{Rodríguez2015}.
+Luego, para la potencia suministrada se considera la siguiente fórmula \cite{Rodriguez2015}.
 \begin{equation}\label{equ:PotenciaSUM}
     N_{SUM}=\frac{N_{CON}}{\eta_T}
 \end{equation}
-Donde $\eta_T$ es la eficiencia del sistema de transmisión corona-sin fin dada por \cite{Rodríguez2015}: 
+Donde $\eta_T$ es la eficiencia del sistema de transmisión corona-sin fin dada por \cite{Rodriguez2015}: 
 \begin{equation}
     \eta_T=(0.92 \rightarrow 0.98)\eta_d
 \end{equation}
@@ -222,7 +222,7 @@ y $\phi$ el ángulo de fricción resultante
 
 En la ecuación (\ref{beta}) \hfill \break $Z_1$ es el número de filetes del tornillo.\hfill \break
 $K$ es la relación diámetro del tornillo y el módulo (factor diámetro).\hfill \break
-Donde $K$ es obtenido de la tabla \ref{tab:FactorK} \cite{Rodríguez2015}.
+Donde $K$ es obtenido de la tabla \ref{tab:FactorK} \cite{Rodriguez2015}.
 
 %----------- Tabla de K------------------------
 \footnotesize
